Initial commit and beginnings

--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,22 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Interstellar Blog
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<h1>Welcome to the Interstallar Blog.</h1>
+<h2>Your presence is very welcome.</h2>
+
+<div id="posts">
+    <a href="/postone/" title="Most Recent Post...">
+        <div id="postone">
+            <h3>This Is Post One</h3>
+            <p>wogbujwbog wekjbgwkjgb wekjfasc wkejfc kaejfbwekgf wkgjbsjdkbvef kwef wkejfbcaksdjbce wkejfb...</p>
+        </div>
+    </a>
+    <a href="/posttwo/" title="Post from December 2024">
+        <div id="postwo">
+            <h3>This Is Post Two</h3>
+            <p>wogbujwbog wekjbgwkjgb wekjfasc wkejfc kaejfbwekgf wkgjbsjdkbvef kwef wkejfbcaksdjbce wkejfb...</p>
+        </div>
+    </a>
+</div>
