--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -14,7 +14,8 @@ title: 11ty Boilerplate
   <nav>
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><a href="/postone/" title="RecentPost">Most Recent</a></li>
+      <li><a href="about/" title="About">About</a></li>
     </ul>
   </nav>
     {{ content }}
