--- a/styles/screen.css
+++ b/styles/screen.css
@@ -8,7 +8,7 @@ body {
 
 nav {
     margin: 40px auto 0 auto;
-    width: 250px;
+    width: 400px;
     border-radius: 50px;
     background: #212431;
 }
@@ -34,17 +34,15 @@ nav ul li a {
 }
 
 h1 {
-    font-size: 8em;
+    font-size: 5em;
     letter-spacing: -2px;
 }
 
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+#posts {
+    display: flex;
+    padding-top: 50px;
 }
 
-img.about {
-    opacity: 0.5;
+#posts div {
+    margin: 50px;
 }
