--- a/styles/screen.css
+++ b/styles/screen.css
@@ -45,4 +45,12 @@ h1 {
 
 #posts div {
     margin: 50px;
+    border: 3px solid #212431;
+    border-radius: 20px;
+}
+
+#posts a{
+    text-decoration: none;
+    color: #EAE8FF;
+
 }
