idk whats wrong

--- a/index.liquid
+++ b/index.liquid
@@ -3,7 +3,7 @@ layout: layout.liquid
 title: Interstellar Blog
 ---
 
-<h1>Welcome to the Interstallar Blog.</h1>
+<h1>Welcome to the <strong>Interstallar</strong> Blog.</h1>
 <h2>Your presence is very welcome.</h2>
 
 <div id="posts">
