--- a/styles/screen.css
+++ b/styles/screen.css
@@ -54,3 +54,9 @@ h1 {
     color: #EAE8FF;
 
 }
+
+h1 strong {
+    background: -webkit-linear-gradient(#4fa7ff #060524);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
