--- a/styles/screen.css
+++ b/styles/screen.css
@@ -44,6 +44,14 @@ h1 strong {
     -webkit-text-fill-color: transparent;
 }
 
+h2 {
+    padding-bottom: 30px;
+}
+
+p {
+    line-height: 1.4em;
+}
+
 #home_content {
     padding-top: 50px;
     display: flex;
