completed footer, short code, second blog post

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -13,9 +13,9 @@ title: 11ty Boilerplate
 <body>
   <nav>
     <ul>
-      <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/postone/" title="RecentPost">Most Recent</a></li>
-      <li><a href="about/" title="About">About</a></li>
+      <li><a href="/" title="Go home" id="nav_home">Home</a></li>
+      <li><a href="/postone/" title="Blog" id="nav_recent">Recent Post</a></li>
+      <li><a href="about/" title="About" id="nav_about">About</a></li>
     </ul>
   </nav>
     {{ content }}
