--- a/index.liquid
+++ b/index.liquid
@@ -19,8 +19,8 @@ title: Interstellar Blog
         </a>
         <a href="/posttwo/" title="Post from December 2024">
             <div id="postwo">
-                <h4>This Is Post Two</h4>
-                <p>wogbujwbog wekjbgwkjgb wekjfasc wkejfc kaejfbwekgf wkgjbsjdkbvef kwef wkejfbcaksdjbce wkejfb...</p>
+                <h4>The Discovery of "Nebula Nectar": A Taste of the Unknown</h4>
+                <p>As I drift further into the vast, uncharted reaches of the universe, the daily grind of isolation and monotony can be... overwhelming. So when I stumbled upon a small packet of space ice cream floating in the cargo hold, I couldn’t help but feel a rush of excitement. This wasn’t any ordinary ice cream, though. No, this was something new: "Nebula Nectar." A brand-new flavor, never before encountered, crafted by some distant colony I can’t even name. As I cracked open the packet, I had no idea what to expect, but I was eager to find out...</p>
             </div>
         </a>
     </div>
@@ -33,3 +33,4 @@ title: Interstellar Blog
         </a>
     </div>
 </div>
+{% spaceLink 'Stardust in the Perseus Molecular Cloud' 'https://apod.nasa.gov/apod/ap250125.html' %}
