--- a/styles/screen.css
+++ b/styles/screen.css
@@ -8,7 +8,7 @@ body {
 
 nav {
     margin: 40px auto 0 auto;
-    width: 400px;
+    width: auto;
     border-radius: 50px;
     background: #212431;
 }
@@ -31,6 +31,11 @@ nav ul li a {
     color: #EAE8FF;
     text-decoration: none;
     font-size: 1.2em;
+}
+
+nav ul li a:hover {
+    background: #4fa7ff;
+    border-radius: 50px;
 }
 
 h1 {
