--- a/styles/screen.css
+++ b/styles/screen.css
@@ -64,12 +64,13 @@ p {
 }
 
 #posts {
+    display: inline-block;
     flex: 2;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 #posts div {
-    margin: 50px;
+    margin: 30px;
     border: 3px solid #212431;
     border-radius: 20px;
 }
@@ -80,10 +81,11 @@ a{
 }
 
 #about_bar {
+    display: inline-block;
     flex: 1;
     border-left: 2px solid #060524;
-    padding: 15px;
-    vertical-align: top;
+    padding: 0px 15px;
+    vertical-align: middle;
 }
 
 #about_bar p {
@@ -94,4 +96,11 @@ a{
 
 #john_pic_home {
     border-radius: 20px;
+    margin: 30px;
+}
+
+.footer {
+    margin-top: 100px;
+    background: #212431;
+    border-radius: 50px;
 }
