--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,13 +9,16 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="/" title="Go home" id="nav_home">Home</a></li>
       <li><a href="/postone/" title="Blog" id="nav_recent">Recent Post</a></li>
-      <li><a href="about/" title="About" id="nav_about">About</a></li>
+      <li><a href="/about/" title="About" id="nav_about">About</a></li>
     </ul>
   </nav>
     {{ content }}
