--- a/index.liquid
+++ b/index.liquid
@@ -19,6 +19,7 @@ title: Interstellar Blog
         <a href="/posttwo/" title="Post from December 2024">
             <div id="postwo">
                 <h4>The Discovery of "Nebula Nectar": A Taste of the Unknown</h4>
+                <!--AI Attribution on page posttwo.md.-->
                 <p>As I drift further into the vast, uncharted reaches of the universe, the daily grind of isolation and monotony can be... overwhelming. So when I stumbled upon a small packet of space ice cream floating in the cargo hold, I couldn’t help but feel a rush of excitement. This wasn’t any ordinary ice cream, though. No, this was something new: "Nebula Nectar." A brand-new flavor, never before encountered, crafted by some distant colony I can’t even name. As I cracked open the packet, I had no idea what to expect, but I was eager to find out...</p>
             </div>
         </a>
